--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/browniefed/jamapassthrough",
   "dependencies": {
+    "lodash": "^3.4.0",
+    "node-uuid": "^1.4.3",
     "request": "^2.48.0",
     "restify": "^2.8.3"
   }
